--- a/bc_proj/clinic/templates/clinic/schedule.html
+++ b/bc_proj/clinic/templates/clinic/schedule.html
@@ -1,39 +1,52 @@
 {% extends 'main/layout.html' %}
 
+{% load static %}
+
 {% block title %}Ваш график{% endblock %}
 
-{% block content %}
-    <h1>График</h1>
-
-    {% if user.is_authenticated %}
-        <h2>Актуальные заказы</h2>
-        {% for order in current_orders %}
-            <div class="order">
-                <h3>Заказ №{{ order.id }}</h3>
-                <p>На: {{ order.user.client.surname }} {{ order.user.client.name }} {{ order.user.client.patronymic }}</p>
-                <p>Врач: {{ order.doctor.surname }} {{ order.doctor.name }} {{ order.doctor.patronymic }}</p>
-                <p>Дата и время приема: {{ order.appointment_date }}</p>
-                <p>Итоговая цена: {{ order.total_price }}</p>
-                {% if order.promo_code %}
-                    <p>Применен промокод: {{ order.promo_code.code }}</p>
-                {% endif %}
-            </div>
-        {% endfor %}
-
-        <h2>Прошедшие заказы</h2>
-        {% for order in past_orders %}
-            <div class="order">
-                <h3>Заказ №{{ order.id }}</h3>
-                <p>На: {{ order.user.client.surname }} {{ order.user.client.name }} {{ order.user.client.patronymic }}</p>
-                <p>Врач: {{ order.doctor.surname }} {{ order.doctor.name }} {{ order.doctor.patronymic }}</p>
-                <p>Дата и время приема: {{ order.appointment_date }}</p>
-                <p>Итоговая цена: {{ order.total_price }}</p>
-                {% if order.promo_code %}
-                    <p>Применен промокод: {{ order.promo_code.code }}</p>
-                {% endif %}
-            </div>
-        {% endfor %}
-    {% else %}
-        <p>Пожалуйста, <a href="{% url 'to_login' %}">авторизуйтесь</a> для просмотра графика.</p>
-    {% endif %}
+{% block custom_css %}
+<link type="text/css" href="{% static 'clinic/css/shedule.css' %}" rel="stylesheet"/>
 {% endblock %}
+
+{% block content %}
+    <main id="schedule-container">
+        <h1 id="schedule-title">График</h1>
+
+        {% if user.is_authenticated %}
+            <section id="current-orders">
+                <h2 class="section-title">Актуальные заказы</h2>
+                {% for order in current_orders %}
+                    <div class="order-card">
+                        <h3 class="order-title">Заказ №{{ order.id }}</h3>
+                        <p class="order-client">На: {{ order.user.client.surname }} {{ order.user.client.name }} {{ order.user.client.patronymic }}</p>
+                        <p class="order-doctor">Врач: {{ order.doctor.surname }} {{ order.doctor.name }} {{ order.doctor.patronymic }}</p>
+                        <p class="order-date">Дата и время приема: {{ order.appointment_date }}</p>
+                        <p class="order-total">Итоговая цена: {{ order.total_price }}</p>
+                        {% if order.promo_code %}
+                            <p class="order-promo">Применен промокод: {{ order.promo_code.code }}</p>
+                        {% endif %}
+                    </div>
+                {% endfor %}
+            </section>
+
+            <section id="past-orders">
+                <h2 class="section-title">Прошедшие заказы</h2>
+                {% for order in past_orders %}
+                    <div class="order-card">
+                        <h3 class="order-title">Заказ №{{ order.id }}</h3>
+                        <p class="order-client">На: {{ order.user.client.surname }} {{ order.user.client.name }} {{ order.user.client.patronymic }}</p>
+                        <p class="order-doctor">Врач: {{ order.doctor.surname }} {{ order.doctor.name }} {{ order.doctor.patronymic }}</p>
+                        <p class="order-date">Дата и время приема: {{ order.appointment_date }}</p>
+                        <p class="order-total">Итоговая цена: {{ order.total_price }}</p>
+                        {% if order.promo_code %}
+                            <p class="order-promo">Применен промокод: {{ order.promo_code.code }}</p>
+                        {% endif %}
+                    </div>
+                {% endfor %}
+            </section>
+        {% else %}
+            <p id="login-message">Пожалуйста, <a href="{% url 'to_login' %}">авторизуйтесь</a> для просмотра графика.</p>
+        {% endif %}
+    </main>
+{% endblock %}
+
