--- a/bc_proj/main/static/main/css/index.css
+++ b/bc_proj/main/static/main/css/index.css
@@ -373,6 +373,31 @@
   100% {opacity: 1;}
 }
 
+/* Стиль для названия компании */
+.girl-container .company-name {
+  position: relative;
+  top: 93%;
+  right: 42%;
+  font-size: 32px;
+  font-weight: bold;
+  color: #0D0D0D;
+  opacity: 0; /* Скрыто по умолчанию */
+  text-align: center;
+  margin-top: 20px;
+  animation: fadeInCompany 2s ease-in-out 3.5s forwards; /* Плавное появление через 4 секунды */
+}
+
+/* Анимация для плавного появления названия */
+@keyframes fadeInCompany {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
 /*new*/
 .page-layout {
     display: flex;
