--- a/bc_proj/main/templates/main/index.html
+++ b/bc_proj/main/templates/main/index.html
@@ -63,6 +63,7 @@
                         <div class="body"></div>
                     </div>
                 </div>
+                <div class="company-name">Галатея</div>
             </div>
         </div>
     </div>
