--- a/bc_proj/clinic/static/clinic/css/login.css
+++ b/bc_proj/clinic/static/clinic/css/login.css
@@ -32,7 +32,7 @@
 /* Стиль полей ввода */
 #login-form input[type="text"],
 #login-form input[type="password"] {
-    width: 100%;
+    width: calc(100% - 20px);
     padding: 10px;
     font-size: 1rem;
     border: 1px solid #ccc;
