--- a/bc_proj/main/static/main/css/news.css
+++ b/bc_proj/main/static/main/css/news.css
@@ -66,7 +66,7 @@
     color: #0D0D0D; /* Цвет заголовка */
 }
 
-.article h2 a {
+.article h2 a[href^="/"] {
     text-decoration: none; /* Убираем подчеркивание */
     color: #DDAA03; /* Цвет ссылки */
 }
