--- a/bc_proj/main/templates/main/news.html
+++ b/bc_proj/main/templates/main/news.html
@@ -16,7 +16,7 @@
 {% block content %}
     <h3 class="news-title">Новости Галатеи</h3>
     <blockquote class="news-quote">
-        <p>Слухи о красоте — как лёгкий ветер,<br>
+        <p lang="en">Слухи о красоте — как лёгкий ветер,<br>
         Новости летят, как звезды по небу.<br>
         Что слышишь ты? Что будет там дальше?<br>
         Сплетни кружат в непрерывном танце.</p>
