--- a/bc_proj/main/templates/main/layout.html
+++ b/bc_proj/main/templates/main/layout.html
@@ -30,7 +30,7 @@
     <header id="site-header">
         <div class="header-content">
             <div class="logo" id="logo-block">
-                <img src="{% static 'main/logo_small.png' %}" alt="Логотип компании">
+                <img class="logo-img" src="{% static 'main/logo_small.png' %}" alt="Логотип компании">
             </div>
             <div class="org-info" id="org-info-block">
                 <h1 id="org-name"><strong>Галатея</strong></h1>
