--- a/bc_proj/clinic/static/clinic/css/services.css
+++ b/bc_proj/clinic/static/clinic/css/services.css
@@ -73,6 +73,9 @@
 
 /* Стили для списка услуг */
 .services-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    gap: 20px;
     margin-top: 20px;
 }
 
@@ -80,7 +83,6 @@
     background-color: #F9F9F9;
     border-radius: 10px;
     padding: 20px;
-    margin-bottom: 20px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
