--- a/bc_proj/main/static/main/css/news.css
+++ b/bc_proj/main/static/main/css/news.css
@@ -4,7 +4,7 @@
     font-size: 2em; /* Размер шрифта заголовка */
     line-height: 1.15; /* Межстрочный интервал */
     color: #333; /* Цвет текста */
-    font-family: "Marck Script", cursive;
+    font-family: "Marck Script", Arial, cursive;
     font-weight: 400;
     font-style: normal;
     position: relative; /* Позиционирование для псевдоэлемента */
@@ -105,6 +105,11 @@ blockquote > p:after {
     font-size: 1em; /* Размер шрифта для краткого содержания */
     color: #333; /* Цвет текста */
     margin-bottom: 15px; /* Отступ снизу */
+    display: -webkit-box; /* Для обрезки текста */
+    -webkit-line-clamp: 3; /* Оставляем только 3 строки */
+    -webkit-box-orient: vertical; /* Вертикальная ориентация */
+    overflow: hidden; /* Скрываем лишний текст */
+    text-overflow: ellipsis; /* Добавляем многоточие */
 }
 
 .article img {
