--- a/bc_proj/clinic/static/clinic/css/promocodes.css
+++ b/bc_proj/clinic/static/clinic/css/promocodes.css
@@ -6,6 +6,13 @@
     margin-bottom: 30px;
 }
 
+.section-title {
+    font-size: 1.5em;
+    color: #0D0D0D; /* Основной цвет сайта */
+    text-align: center;
+    margin-bottom: 30px;
+}
+
 /* Стили для кнопок */
 .btn {
     padding: 10px 15px;
