ЛАБОРАТОРНАЯ 2 (плавающие блоки корректно)

--- a/bc_proj/clinic/static/clinic/css/vacancies.css
+++ b/bc_proj/clinic/static/clinic/css/vacancies.css
@@ -19,14 +19,11 @@
     text-decoration: underline;
 }
 
-.vacancies-list {
-    overflow: hidden; /* Очищаем плавающие элементы */
-}
-
 .vacancy-card {
-    width: 20%; /* Ограничиваем ширину для каждой карточки */
+    max-width: 200px; /* Ограничиваем ширину для каждой карточки */
     margin: 10px; /* Отступы между карточками */
     float: left; /* Делаем карточки плавающими влево */
+    /*clear: both;*/
     border: 1px solid #DDAA03;
     padding: 15px;
     border-radius: 8px;
@@ -42,11 +39,4 @@
 .vacancy-description {
     font-size: 16px;
     color: #555555;
-}
-
-/* Очищение обтекания */
-.vacancies-list::after {
-    content: "";
-    display: block;
-    clear: both;
 }
