--- a/bc_proj/main/templates/main/index.html
+++ b/bc_proj/main/templates/main/index.html
@@ -71,11 +71,41 @@
 
     <section class="banner">
         <div class="banner-container">
-            <img src="{% static 'main/banner_1.gif' %}" alt="Реклама компании" class="banner-img" width="600">
-            <img src="{% static 'main/banner_2.gif' %}" alt="Реклама компании" class="banner-img" width="600">
-            <img src="{% static 'main/banner_3.gif' %}" alt="Реклама компании" class="banner-img" width="600">
+            <div class="slide">
+                <a href="https://example.com/page1">
+                    <img src="{% static 'main/banner_1.gif' %}" alt="Реклама компании" class="banner-img">
+                </a>
+                <p class="caption">Caption Text 1</p>
+            </div>
+            <div class="slide">
+                <a href="https://example.com/page2">
+                    <img src="{% static 'main/banner_2.gif' %}" alt="Реклама компании" class="banner-img">
+                </a>
+                <p class="caption">Caption Text 2</p>
+            </div>
+            <div class="slide">
+                <a href="https://example.com/page3">
+                    <img src="{% static 'main/banner_3.gif' %}" alt="Реклама компании" class="banner-img">
+                </a>
+                <p class="caption">Caption Text 3</p>
+            </div>
+
+            <!-- Кнопки "назад" и "вперед" -->
+            <button class="prev">&#10094;</button>
+            <button class="next">&#10095;</button>
+
+            <!-- Индикатор слайда и количество -->
+            <div class="slide-index">1/3</div>
+
+            <!-- Пагинация (точки) -->
+            <div class="pagination">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
         </div>
     </section>
+
 
     <section class="service-catalog">
         <h2 class="catalog-title">Каталог услуг</h2>
@@ -131,4 +161,6 @@
         <div class="bar"></div>
         <div class="bar"></div>
     </div>
+
+    <script src="{% static 'main/js/slider.js' %}"></script>
 {% endblock %}
