--- a/bc_proj/main/static/main/css/index.css
+++ b/bc_proj/main/static/main/css/index.css
@@ -528,6 +528,21 @@
     font-size: 16px;
 }
 
+.caption {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: rgba(255, 255, 255, 0.5);
+    border-radius: 0 0 0 5px;
+    padding: 5px;
+    font-size: 1rem;
+    font-weight: bold;
+    z-index: 10;
+}
+
+
 /* Пагинация */
 .pagination {
     position: absolute;
