--- a/bc_proj/main/static/main/css/styles.css
+++ b/bc_proj/main/static/main/css/styles.css
@@ -224,3 +224,9 @@ transition: transform 0.3s ease-in-out;
 .logo-img:hover {
 transform: rotate(360deg);
 }
+
+@media (max-width: 1226px) {
+    #countdown-timer {
+        display: none;
+    }
+}
