Начал третий пункт лабы тем, что создал страницу с начальным HTML, CSS и выводом данных

--- a/bc_proj/main/templates/main/layout.html
+++ b/bc_proj/main/templates/main/layout.html
@@ -63,6 +63,7 @@
                 <li><a href="{% url 'schedule' %}">График</a></li>
                 {% else %}
                 <li><a href="{% url 'statistics' %}">Статистика</a></li>
+                <li><a href="{% url 'employees' %}">Сотрудники</a></li>
                 {% endif %} {% if user.client %}
                 <li><a href="{% url 'basket' %}">Корзина</a></li>
                 {% endif %} {% endif %}
